<resources>
    <string name="app_name">COVID-APP</string>
    <string name="app_subtitle">Contact Tracing Mobile Tool</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="button_fullscreen_1">New Contacts</string>
    <string name="button_fullscreen_2">Start New Trace</string>
    <string name="button_fullscreen_3">Visited Contacts</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_new_trace">New Trace</string>
    <string name="title_activity_login">Log in</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pref_key">APP_PREFS</string>
    <string name="user_id">USER_ID</string>
    <string name="user_email">USER_EMAIL</string>
    <string name="user_phone">USER_PHONE</string>
    <string name="user_pin">USER_PIN</string>
    <string name="user_name">USER_NAME</string>
    <string name="user_dpt">USER_DEPARTMENT</string>
    <string name="user_roles">USER_ROLES</string>
    <string name="user_token">USER_TOKEN</string>
    <string name="pref_notification_key">PrefUserNotificationID</string>
    <string name="save_trace_url">http://covidapp.digitelgh.com/api/android/save-trace</string>
    <string name="signin_url">http://covidapp.digitelgh.com/api/signin</string>
    <string name="followup_save_url">http://contacttracingghana.com/api/followup</string>
    <string name="fetch_traces_url">"http://contacttracingghana.com/api/traces"</string>
    <string name="fetch_assignments_url">"http://contacttracingghana.com/api/assignments"</string>
    <string name="fetch_contacts_url">"http://contacttracingghana.com/api/contacts"</string>
    <string name="fetch_followups_url">"http://contacttracingghana.com/api/followups"</string>
    <string name="channel_name">NOTIFICATION_NAME</string>
    <string name="channel_description">NOTIFICATION_DESCRIPTION</string>
    <string name="title_activity_transport_request">Transport Request</string>
    <string name="title_activity_farmer_list">Supplier List</string>
    <string name="s1">Section 1 - Personal Detail</string>
    <string name="q1">Full name</string>
    <string name="q2">Date of birth</string>
    <string name="q3">Gender</string>
    <string name="q4">Nationality</string>
    <string name="q5">Phone number</string>
    <string name="q6">Marital Status</string>
    <string name="q7">Number of children</string>
    <string name="s2">Section 2 - Residency Detail</string>
    <string name="q8">Residential address</string>
    <string name="q9">Type of residence</string>
    <string name="q10">Residential arrangement</string>
    <string name="q11">Shared facilities</string>
    <string name="q12">Number of individuals shared with</string>
    <string name="q13">Estimated population at residence (including family and neighbors)</string>
    <string name="s3">Section 3 - Employment Detail</string>
    <string name="q14">Employment status</string>
    <string name="q15">Name of employer</string>
    <string name="q16">Work location</string>
    <string name="q17">Contact of manager</string>
    <string name="q18">Last time present at work</string>
    <string name="s4">Section 4 - Health Detail</string>
    <string name="q19">Indicated symptoms</string>
    <string name="q20">Medical history</string>
    <string name="q21">Tested for COVID-19?</string>
    <string name="q22">Date of test</string>
    <string name="q23">Name of hospital</string>
    <string name="q24">Test result</string>
    <string name="s5">Section 5 - Travel &amp; Movement History</string>
    <string name="q25">Travelled recently? (including international and inward)</string>
    <string name="q26">List destinations and return dates</string>
    <string name="q27">Regular mode of transport</string>
    <string name="s6">Section 6 - Contact Detail</string>
    <string name="q28">Recent contacts (who have been in close contact with subject)</string>
    <string name="s7">Section 6 - Testing</string>
    <string name="q29">Sample taken?</string>
    <string name="q30">Date taken</string>
    <string name="q31">Test Result</string>
    <string name="q32">Isolation decision</string>
    <string name="q33">Quarantine completion date</string>
    <string name="header_follow_up_page">Symptoms</string>
    <string name="remark_follow_up_page">Remarks</string>
    <string name="header_add_contacts_page">Add New Contact</string>
    <string name="phone">Phone number</string>
    <string name="pin">Pin</string>
    <string name="login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_trace_list">My Previous Traces</string>
    <string name="title_contacts_list">Contacts List</string>
    <string name="title_assignments_list">My Assignments</string>
    <string name="title_trace_detail">Trace Detail</string>
    <string name="title_followups_list">Follow Ups</string>
    <string name="title_fill_followup_form">Fill Report</string>
    <string name="title_continue_trace">Continue Trace</string>
    <string name="title_contact_form">Add Contact</string>
    <string-array name="gender">
        <item></item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="marital">
        <item></item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string name="follow_up_day_label">Day 1</string>
    <string name="follow_up_today_date">Date: </string>
</resources>