<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main" />

    <LinearLayout
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="55dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/coa" />

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#90ffffff"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_darkborder"
                    android:ems="10"
                    android:fontFamily="@font/quicksand"
                    android:hint="@string/phone"
                    android:inputType="number"
                    android:maxLength="10"
                    android:nextFocusDown="@id/pin"
                    android:padding="8dp"
                    android:textSize="19sp" />

                <EditText
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_darkborder"
                    android:ems="10"
                    android:fontFamily="@font/quicksand"
                    android:hint="@string/pin"
                    android:inputType="textPassword"
                    android:nextFocusDown="@id/send"
                    android:padding="8dp"
                    android:textSize="19sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/send"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="5dp"
                        android:background="@drawable/yellow_btn_bg"
                        android:fontFamily="@font/mitr_light"
                        android:text="@string/login"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <ProgressBar
                        android:id="@+id/progress"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                </FrameLayout>

                <TextView
                    android:id="@+id/err"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/abel"
                    android:text="TextView"
                    android:textColor="#FB364D"
                    android:visibility="invisible" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>